--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -29,7 +29,9 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
 
-      - run: npx wp-pwa build basketball
+      - run: npm install
+
+      - run: npm run build
       
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
